# cookiecutter-aioworkers-plugin

./: .gitignore  .travis.yml  Pipfile  README.md  cookiecutter.json  pyproject.toml  scaraplate.yaml  setup.cfg
.github/: dependabot.yml
.github/workflows/: tests.yml
tests/: conftest.py  test_baked.py
{{cookiecutter.project_slug}}/: .editorconfig  .scaraplate.conf  .travis.yml  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: codeql-analysis.yml  tests.yml  upload.yml
{{cookiecutter.project_slug}}/tests/: test_plugin.py
