[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.project_slug}}"
dynamic = ["version"]
description = "{{cookiecutter.description}}"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">={{ cookiecutter.python_versions.split(',')[0] }}"
authors = [
    { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" },
]
keywords = [
    "aioworkers",
]
classifiers = [
    "{{ cookiecutter.development_status }}",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    {%- for version in cookiecutter.python_versions.split(",") %}
    "Programming Language :: Python :: {{ version }}",
    {%- endfor %}
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "aioworkers>=0.28.0",
]
[project.optional-dependencies]
dev-test = [
    "aioworkers==0.28.0",
    "coverage[toml]==7.7.1",
    "pytest==8.3.5",
    "pytest-aioworkers[asyncio]==0.5.0",
    "pytest-mock==3.14.0",
    "pyyaml==6.0.2",
]
dev-lint = [
    "ruff==0.11.2",
    "mypy==1.15.0",
]

[project.entry-points.aioworkers]
{{cookiecutter.project_name}} = "{{cookiecutter.project_package}}"

[project.urls]
Homepage = "https://github.com/aioworkers/{{cookiecutter.project_slug}}"
Documentation = "{{cookiecutter.docs}}"
Issues = "https://github.com/aioworkers/{{cookiecutter.project_slug}}/issues"
Source = "https://github.com/aioworkers/{{cookiecutter.project_slug}}"

[tool.hatch.version]
path = "{{cookiecutter.project_package}}/__init__.py"

[tool.hatch.build]
include = [
    "/{{cookiecutter.project_package}}",
]

[tool.hatch.envs.default]
features = [
    "dev-test",
]
[tool.hatch.envs.default.scripts]
cov = [
    "coverage run -m pytest",
    "coverage report",
]

[[tool.hatch.envs.all.matrix]]
python = [
{%- for version in cookiecutter.python_versions.split(",") %}
    "{{ version }}",
{%- endfor %}
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "{{cookiecutter.project_package}}",
    "tests",
]
addopts = [
    "--doctest-modules",
]

[tool.coverage.run]
branch = true
parallel = false
source = [
    "{{cookiecutter.project_package}}",
    "tests",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py{{ cookiecutter.python_versions.split(',')[0] | replace('.', '') }}"

[tool.ruff.lint]
extend-select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  # "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  # "SIM",
  # isort
  "I",
]
extend-ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pytest",
]
ignore_missing_imports = true

[tool.hatch.envs.lint]
python = "{{ cookiecutter.python_ci }}"
features = [
    "dev-lint",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:{{cookiecutter.project_package}} tests}"
style = [
    "ruff check {args:{{cookiecutter.project_package}} tests}",
    "ruff format --check --diff {args:{{cookiecutter.project_package}} tests}",
]
fmt = [
    "ruff check --fix {args:{{cookiecutter.project_package}} tests}",
    "ruff format {args:{{cookiecutter.project_package}} tests}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.hatch.envs.template]
detached = true
dependencies = [
    "scaraplate",
]
[tool.hatch.envs.template.scripts]
update = [
    "scaraplate rollup --no-input {args:../cookiecutter-aioworkers-plugin} ."
]
clone = [
    "git clone https://github.com/aioworkers/cookiecutter-aioworkers-plugin {args:../cookiecutter-aioworkers-plugin}"
]
